# SlicerSurfaceToolbox

./: CMakeLists.txt  README.md
AlignMesh/: AlignMesh.cxx  AlignMesh.xml  CMakeLists.txt
AlignMeshICP/: AlignMeshICP.cxx  AlignMeshICP.xml  CMakeLists.txt
AverageMesh/: AverageMesh.py  CMakeLists.txt
BordersOut/: BordersOut.cxx  BordersOut.xml  CMakeLists.txt
Cleaner/: CMakeLists.txt  Cleaner.cxx  Cleaner.xml
Connectivity/: CMakeLists.txt  Connectivity.cxx  Connectivity.xml
Decimation/: CMakeLists.txt  Decimation.cxx  Decimation.xml  Simplify.h
DynamicModeler/: CMakeLists.txt  qSlicerDynamicModelerModule.cxx  qSlicerDynamicModelerModule.h  qSlicerDynamicModelerModuleWidget.cxx  qSlicerDynamicModelerModuleWidget.h
DynamicModeler/Logic/: CMakeLists.txt  vtkFastMarchingGeodesicDistance.cxx  vtkFastMarchingGeodesicPath.cxx  vtkImplicitPolyDataPointDistance.cxx  vtkImplicitPolyDataPointDistance.h  vtkPolyDataGeodesicDistance.cxx  vtkPolyDataGeodesicDistance.h  vtkPolygonalSurfaceContourLineInterpolator2.cxx  vtkSlicerDynamicModelerAppendRule.cxx  vtkSlicerDynamicModelerAppendRule.h  vtkSlicerDynamicModelerAppendTool.cxx  vtkSlicerDynamicModelerAppendTool.h  vtkSlicerDynamicModelerBoundaryCutRule.cxx  vtkSlicerDynamicModelerBoundaryCutRule.h  vtkSlicerDynamicModelerBoundaryCutTool.cxx  vtkSlicerDynamicModelerBoundaryCutTool.h  vtkSlicerDynamicModelerCurveCutRule.cxx  vtkSlicerDynamicModelerCurveCutRule.h  vtkSlicerDynamicModelerCurveCutTool.cxx  vtkSlicerDynamicModelerCurveCutTool.h  vtkSlicerDynamicModelerExtrudeTool.cxx  vtkSlicerDynamicModelerExtrudeTool.h  vtkSlicerDynamicModelerHollowTool.cxx  vtkSlicerDynamicModelerHollowTool.h  vtkSlicerDynamicModelerLogic.cxx  vtkSlicerDynamicModelerLogic.h  vtkSlicerDynamicModelerMarginTool.cxx  vtkSlicerDynamicModelerMarginTool.h  vtkSlicerDynamicModelerMirrorRule.cxx  vtkSlicerDynamicModelerMirrorRule.h  vtkSlicerDynamicModelerMirrorTool.cxx  vtkSlicerDynamicModelerMirrorTool.h  vtkSlicerDynamicModelerPlaneCutRule.cxx  vtkSlicerDynamicModelerPlaneCutRule.h  vtkSlicerDynamicModelerPlaneCutTool.cxx  vtkSlicerDynamicModelerPlaneCutTool.h  vtkSlicerDynamicModelerROICutTool.cxx  vtkSlicerDynamicModelerROICutTool.h  vtkSlicerDynamicModelerRevolveTool.cxx  vtkSlicerDynamicModelerRevolveTool.h  (+14 more)
DynamicModeler/Logic/FastMarching/: CMakeLists.txt  License.txt  README.md  vtkFastMarchingGeodesicDistance.cxx  vtkFastMarchingGeodesicDistance.h  vtkFastMarchingGeodesicPath.h  vtkPolyDataGeodesicDistance.h  vtkPolygonalSurfaceContourLineInterpolator2.cxx  vtkPolygonalSurfaceContourLineInterpolator2.h
DynamicModeler/Logic/FastMarching/gw_core/: GW_Config.cpp  GW_Config.h  GW_Face.cpp  GW_Face.inl  GW_FaceIterator.cpp  GW_FaceIterator.h  GW_Mesh.cpp  GW_Mesh.h  GW_Mesh.inl  GW_SmartCounter.inl  GW_Vertex.h  GW_Vertex.inl  GW_VertexIterator.cpp  GW_VertexIterator.h  stdafx.h
DynamicModeler/Logic/FastMarching/gw_geodesic/: GW_GeodesicFace.h  GW_GeodesicMesh.cpp  GW_GeodesicMesh.h  GW_GeodesicMesh.inl  GW_GeodesicPath.cpp  GW_GeodesicPath.h  GW_GeodesicPoint.inl  GW_GeodesicVertex.h  GW_Parameterization.h  GW_TriangularInterpolation_ABC.h  GW_TriangularInterpolation_Cubic.cpp  GW_TriangularInterpolation_Linear.cpp  GW_TriangularInterpolation_Linear.h  GW_TriangularInterpolation_Quadratic.cpp  GW_VoronoiMesh.h  GW_VoronoiVertex.h  fmmtypes.h  stdafx.h
DynamicModeler/Logic/FastMarching/gw_maths/: GW_Maths.h  GW_MathsConfig.h  GW_VectorStatic.h
DynamicModeler/Logic/Source/: .vtkFastMarchingGeodesicDistance.cxx.swp  .vtkFastMarchingGeodesicPath.h.swp  CMakeLists.txt  vtkFastMarchingGeodesicDistance.h  vtkFastMarchingGeodesicPath.h  vtkPolygonalSurfaceContourLineInterpolator2.h
DynamicModeler/MRML/: CMakeLists.txt  vtkMRMLDynamicModelerNode.cxx  vtkMRMLDynamicModelerNode.h
DynamicModeler/Resources/: qSlicerDynamicModelerModule.qrc
DynamicModeler/SubjectHierarchyPlugins/: CMakeLists.txt  qSlicerSubjectHierarchyDynamicModelerPlugin.cxx  qSlicerSubjectHierarchyDynamicModelerPlugin.h
FillHoles/: CMakeLists.txt  FillHoles.cxx  FillHoles.xml
GetCurvatures/: CMakeLists.txt  GetCurvatures.cxx  GetCurvatures.xml
GetDirectionFeatures/: CMakeLists.txt  GetDirectionFeatures.cxx  GetDirectionFeatures.xml
ImportFromFile/: CMakeLists.txt  ImportFromFile.cxx  ImportFromFile.xml
InvVect/: CMakeLists.txt  InvVect.cxx  InvVect.xml
KWMToPolyData/: CMakeLists.txt  KWMToPolyData.cxx  KWMToPolyData.xml
MC2Origin/: CMakeLists.txt  MC2Origin.cxx  MC2Origin.xml
MeshAlignment/: CMakeLists.txt  MeshAlignment.py
MeshDataImprinter/: CMakeLists.txt  MeshDataImprinter.py
Mirror/: CMakeLists.txt  Mirror.cxx  Mirror.xml
Normals/: CMakeLists.txt  Normals.cxx  Normals.xml
ParametricSurfaceEditor/: CMakeLists.txt  qSlicerParametricSurfaceEditorModule.cxx  qSlicerParametricSurfaceEditorModule.h  qSlicerParametricSurfaceEditorModuleWidget.cxx  qSlicerParametricSurfaceEditorModuleWidget.h
ParametricSurfaceEditor/Logic/: CMakeLists.txt  vtkSlicerParametricSurfaceEditorLogic.cxx  vtkSlicerParametricSurfaceEditorLogic.h  vtkSlicerParametricSurfaceEditorRule.cxx  vtkSlicerParametricSurfaceEditorRule.h  (+4 more)
Smoothing/: CMakeLists.txt  Smoothing.cxx  Smoothing.xml
SurfaceDistance/: CMakeLists.txt  SurfaceDistance.py
SurfaceFeatureExtractor/: CMakeLists.txt  SurfaceFeatureExtractor.py
SurfaceToolbox/: CMakeLists.txt  SurfaceToolbox.py
applyVec/: CMakeLists.txt  applyVec.cxx  applyVec.xml
avgMesh/: CMakeLists.txt  avgMesh.cxx  avgMesh.xml
closestPoint/: CMakeLists.txt  closestPoint.cxx  closestPoint.xml
extractVertices/: CMakeLists.txt  extractVertices.cxx  extractVertices.xml
lookupPointData/: CMakeLists.txt  lookupPointData.cxx  lookupPointData.xml
meshValues/: CMakeLists.txt  meshValues.cxx  meshValues.xml
pointDataOP/: CMakeLists.txt  pointDataOP.cxx  pointDataOP.xml
relaxPolygons/: CMakeLists.txt  relaxPolygons.cxx  relaxPolygons.xml
scaleMesh/: CMakeLists.txt  scaleMesh.cxx  scaleMesh.xml
translateMesh/: CMakeLists.txt  translateMesh.cxx  translateMesh.xml
volumePolyData/: CMakeLists.txt  volumePolyData.cxx  volumePolyData.xml
(+16 files in other folders)
